--- a/pontarius-xmpp.cabal
+++ b/pontarius-xmpp.cabal
@@ -50,8 +50,8 @@ Library
                , exceptions           >=0.6
                , hslogger             >=1.1.0
                , iproute              >=1.2.4
-               , lens                 ^>= 5.0.1
-               , lens-family          ^>= 2.1
+               , lens
+               , lens-family
                , lifted-base          >=0.1.0.1
                , mtl                  >=2.0.0.0
                , network              >=2.3.1.0
