--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,8 +34,9 @@ jobs:
     - name: Build
       run: |
         cabal v2-update
-        cabal v2-build --enable-benchmarks
+        cabal v2-build --enable-tests --enable-benchmarks
 
     - name: Test
       run: |
+        cabal v2-test
         cabal v2-bench
