--- a/pontarius-xmpp.cabal
+++ b/pontarius-xmpp.cabal
@@ -17,7 +17,7 @@ Description:   Pontarius XMPP is a work in progress implementation of RFC 6120
                While in alpha, Pontarius XMPP works quite well and fulfills most
                requirements of the RFCs.
 Category:      Network
-Tested-With:   GHC == 9.0.1
+Tested-With:   GHC == 9.2.4
 
 Extra-Source-Files: README.md
                   , ChangeLog.md
@@ -118,7 +118,7 @@ Library
 
   if flag(with-th) && impl(ghc >= 7.6.1)
     CPP-Options: -DWITH_TEMPLATE_HASKELL
-  GHC-Options: -Wall -fwarn-tabs
+  GHC-Options: -W -fwarn-tabs
   default-language:    Haskell2010
 
 Test-Suite tests
@@ -163,7 +163,7 @@ Test-Suite tests
                , Tests.Parsers
                , Tests.Picklers
                , Tests.Stream
-  ghc-options: -Wall -O2 -fno-warn-orphans
+  ghc-options: -W -O2 -fno-warn-orphans
   default-language:    Haskell2010
 
 Test-Suite runtests
@@ -177,7 +177,7 @@ Test-Suite runtests
                , Run.SendReceive
                , Run.Google
                , Run.Config
-  GHC-Options: -Wall -threaded
+  GHC-Options: -W -threaded
   Build-Depends: base
                , HUnit
                , configurator
