--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 name: CI
 
-# Trigger the workflow on push or pull request, but only for the master branch
+# Trigger the workflow on push or pull request
 on:
   [ pull_request, push ]
 
@@ -12,15 +12,19 @@ jobs:
       fail-fast: false
       matrix:
         ghc:
-          - "8.2.2"
-          - "8.4.4"
-          - "8.6.5"
-          - "8.8.3"
-          - "8.10.1"
+          - "8.0"
+          - "8.2"
+          - "8.4"
+          - "8.6"
+          - "8.8"
+          - "8.10"
+          - "9.0"
+          - "9.2"
+          - "latest"
 
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-haskell@v1
+    - uses: actions/checkout@v3
+    - uses: haskell/actions/setup@v2
       name: Setup Haskell
       with:
         ghc-version: ${{ matrix.ghc }}
@@ -38,5 +42,4 @@ jobs:
 
     - name: Test
       run: |
-        cabal v2-test
-        cabal v2-bench
+        cabal v2-test --enable-tests
