--- a/pontarius-xmpp.cabal
+++ b/pontarius-xmpp.cabal
@@ -1,6 +1,6 @@
 Cabal-Version: 2.2
 Name:          pontarius-xmpp
-Version:       0.5.6.5
+Version:       0.5.6.6
 Build-Type:    Simple
 License:       BSD-3-Clause
 License-File:  LICENSE.md
@@ -41,7 +41,7 @@ common stuff
                , conduit              >=1.3 && < 1.4
                , containers           >=0.4.0.0
                , crypto-api           >=0.9
-               , crypto-random        >=0.0.5
+               , cryptonite           >=0.30 && < 1.0
                , cryptohash           >=0.6.1
                , cryptohash-cryptoapi >=0.1
                , data-default         >=0.2
