--- a/pontarius-xmpp.cabal
+++ b/pontarius-xmpp.cabal
@@ -65,7 +65,7 @@ common stuff
                , transformers         >=0.3
                , unbounded-delays     >=0.1
                , void                 >=0.5.5
-               , x509-system          >=1.4
+               , crypton-x509-system  >=1.4
                , xml-conduit          >=1.1.0.7
                , xml-picklers         >=0.3.3
                , xml-types            >=0.3.1
