--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,10 @@ jobs:
       fail-fast: false
       matrix:
         ghc:
+          - "8.0"
+          - "8.2"
+          - "8.4"
+          - "8.6"
           - "8.8"
           - "8.10"
           - "9.0"
@@ -19,20 +23,26 @@ jobs:
           - "9.4"
           - "9.6"
           - "9.8"
+          - "9.10"
+          - "9.12"
           - "latest"
 
     steps:
     - uses: actions/checkout@v3
-    - uses: haskell/actions/setup@v2
+    - uses: haskell-actions/setup@v2
       name: Setup Haskell
       with:
         ghc-version: ${{ matrix.ghc }}
 
-    - uses: actions/cache@v1
-      name: Cache ~/.cabal/store
+    - uses: actions/cache@v4
+      name: Cache ~/.cabal/packages, ~/.cabal/store and dist-newstyle
       with:
-        path: ~/.cabal/store
-        key: ${{ runner.os }}-${{ matrix.ghc }}-cabal
+        path: |
+          ~/.cabal/packages
+          ~/.cabal/store
+          dist-newstyle
+        key: ${{ runner.os }}-${{ matrix.ghc }}-${{ hashFiles('**/*.cabal', '**/cabal.project', '**/cabal.project.freeze') }}
+        restore-keys: ${{ runner.os }}-${{ matrix.ghc }}-
 
     - name: Build
       run: |
